# sql-query-optimizer

./: .env.example  README.md  TECHNICAL_REPORT.md  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: Dockerfile  app.py  environment.py  requirements.txt
